fixed overflow design problem in left panel and center video element

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -630,6 +630,10 @@ video {
   z-index: 10;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .col-span-12 {
   grid-column: span 12 / span 12;
 }
@@ -787,6 +791,14 @@ video {
 
 .h-10 {
   height: 2.5rem;
+}
+
+.max-h-full {
+  max-height: 100%;
+}
+
+.max-h-screen {
+  max-height: 100vh;
 }
 
 .w-2\/3 {
